--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
   <title>Resume...</title>
-  <meta http-equiv="refresh" content="0; url=https://cdn.abranhe.com/Resume.pdf">
+  <meta http-equiv="refresh" content="0; url=https://cdn.abranhe.com/resume.pdf">
 </head>
 </html>
